[gd_scene load_steps=2 format=3 uid="uid://remantler001"]

[ext_resource type="Script" path="res://scripts/ui/remantler_panel.gd" id="1"]

[node name="RemantlerPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -325.0
offset_right = 500.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "REMANTLER - Weapon Upgrade Station"

[node name="SigilLabel" type="Label" parent="PanelContainer/VBox/Header"]
layout_mode = 2
text = "Sigils: 0"

[node name="Spacer" type="Control" parent="PanelContainer/VBox/Header"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CloseButton" type="Button" parent="PanelContainer/VBox/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="Content" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="PanelContainer/VBox/Content"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="WeaponsTitle" type="Label" parent="PanelContainer/VBox/Content/LeftPanel"]
layout_mode = 2
text = "Your Weapons"

[node name="WeaponList" type="ItemList" parent="PanelContainer/VBox/Content/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterPanel" type="VBoxContainer" parent="PanelContainer/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponStats" type="RichTextLabel" parent="PanelContainer/VBox/Content/CenterPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="UpgradeSection" type="VBoxContainer" parent="PanelContainer/VBox/Content/CenterPanel"]
layout_mode = 2

[node name="UpgradeTitle" type="Label" parent="PanelContainer/VBox/Content/CenterPanel/UpgradeSection"]
layout_mode = 2
text = "UPGRADE"

[node name="MaterialsLabel" type="RichTextLabel" parent="PanelContainer/VBox/Content/CenterPanel/UpgradeSection"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true

[node name="PreviewLabel" type="RichTextLabel" parent="PanelContainer/VBox/Content/CenterPanel/UpgradeSection"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true

[node name="CostLabel" type="Label" parent="PanelContainer/VBox/Content/CenterPanel/UpgradeSection"]
layout_mode = 2
text = "Cost: 0 Sigils"

[node name="UpgradeButton" type="Button" parent="PanelContainer/VBox/Content/CenterPanel/UpgradeSection"]
layout_mode = 2
disabled = true
text = "UPGRADE WEAPON"

[node name="DismantleSection" type="HBoxContainer" parent="PanelContainer/VBox/Content/CenterPanel"]
layout_mode = 2

[node name="DismantleButton" type="Button" parent="PanelContainer/VBox/Content/CenterPanel/DismantleSection"]
layout_mode = 2
disabled = true
text = "DISMANTLE"

[node name="PreviewLabel" type="Label" parent="PanelContainer/VBox/Content/CenterPanel/DismantleSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RerollSection" type="HBoxContainer" parent="PanelContainer/VBox/Content/CenterPanel"]
layout_mode = 2

[node name="RerollButton" type="Button" parent="PanelContainer/VBox/Content/CenterPanel/RerollSection"]
layout_mode = 2
disabled = true
text = "REROLL ABILITY"

[node name="CostLabel" type="Label" parent="PanelContainer/VBox/Content/CenterPanel/RerollSection"]
layout_mode = 2
text = "Cost: 250 Sigils"

[node name="RightPanel" type="VBoxContainer" parent="PanelContainer/VBox/Content"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="AugmentTitle" type="Label" parent="PanelContainer/VBox/Content/RightPanel"]
layout_mode = 2
text = "Augment Sockets"

[node name="AugmentList" type="ItemList" parent="PanelContainer/VBox/Content/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddAugmentButton" type="Button" parent="PanelContainer/VBox/Content/RightPanel"]
layout_mode = 2
disabled = true
text = "ADD AUGMENT"
